# akane

./: .gitignore  Cargo.toml  README.md  config.yml.example  deploy.sh
.github/: copilot-instructions.md
.github/workflows/: build.yml
akane-webui/: next.config.ts  package.json  tsconfig.json
akane-webui/app/: globals.css  layout.tsx  page.tsx
akane-webui/app/admin-webui/: layout.tsx  page.tsx
akane-webui/app/admin-webui/videos/: page.tsx
akane-webui/app/analytics/: page.tsx
akane-webui/app/videos/: page.tsx
akane-webui/components/: AuthWrapper.tsx  Button.tsx  Input.tsx  Navbar.tsx  ProcessingQueues.tsx  ProgressBar.tsx
akane-webui/context/: UploadContext.tsx
akane-webui/utils/: format.ts
public/: index.html  videos.html
src/: clickhouse.rs  config.rs  database.rs  handlers.rs  main.rs  storage.rs  types.rs  video.rs
src/handlers/: analytics.rs  common.rs  content.rs  mod.rs  player.rs  upload.rs  video.rs
