[package]
name = "akane"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["multipart"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
axiom = "0.2.1"
regex = "1.12.2"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v4"] }
anyhow = "1.0"
tokio-stream = "0.1"
dotenv = "0.15.0"
tower-http = { version = "0.6.6", features = ["fs"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = "0.4.42"
