[package]
name = "akane"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
aws-sdk-s3 = { version = "1.115.0", features = ["behavior-version-latest"] }
axiom = "0.2.1"
regex = "1.12.2"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v4"] }
anyhow = "1.0"
tokio-stream = "0.1"
serde_yaml = "0.9"
tower-http = { version = "0.6.7", features = ["fs", "trace", "cors"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = "0.4.42"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
minify-js = "0.6.0"
async-stream = "0.3"
clickhouse = { version = "0.13.0", features = [] }
